--- a/Lab14/Lab14.csproj
+++ b/Lab14/Lab14.csproj
@@ -1,16 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\..\..\ConsoleIOLib\ConsoleIOLib\ConsoleIOLib.csproj" />
     <ProjectReference Include="..\..\..\ConsoleDialogLib\ConsoleDialogLib\ConsoleDialogLib.csproj" />
     <ProjectReference Include="..\..\Lab13\Lab10Lib\Lab10Lib.csproj" />
+    <ProjectReference Include="..\..\Lab13\Lab12Lib\Lab12Lib.csproj" />
   </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
 </Project>
